# advent-of-code-2024

./: LICENSE  README.md  main.py  pyproject.toml
solutions/: day_01_part_01.py  day_01_part_02.py  day_02_part_01.py  day_02_part_02.py  day_03_part_01.py  day_03_part_02.py  day_04_part_02.py
solutions/day01/: part_01.py
solutions/day02/: part_02.py
solutions/day04/: part_01.py
solutions/day05/: part_01.py  part_02.py
solutions/day06/: part_01.py  part_02.py
solutions/day07/: part_01.py  part_02.py
solutions/day08/: part_01.py  part_02.py
solutions/day09/: part_01.py  part_02.py
solutions/day10/: part_01.py  part_02.py
solutions/day11/: part_01.py  part_02.py
solutions/day12/: part_01.py  part_02.py
src/: fetch_input_data.py  input_parser.py  logger.py
tests/: test_day_01_part_01.py  test_day_01_part_02.py  test_day_02_part_01.py  test_day_02_part_02.py  test_day_03_part_01.py  test_day_03_part_02.py  test_day_04_part_01.py  test_day_04_part_02.py  test_day_05_part_01.py  test_day_05_part_02.py  test_day_06_part_01.py  test_day_06_part_02.py  test_day_07_part_01.py  test_day_07_part_02.py  test_day_08_part_01.py  test_day_08_part_02.py  test_day_09_part_01.py  test_day_09_part_02.py  test_day_10_part_01.py  test_day_10_part_02.py  test_day_11_part_01.py  test_day_11_part_02.py  test_day_12_part_01.py  test_day_12_part_02.py
