[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Advent of Code 2024 in Python"
authors = ["Joshua Spratt <jspratt02@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
black = "^24.10.0"
pytest = "^8.3.3"
networkx = "^3.4.2"
numpy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
